done/public/assets/styles.css
/**
 * Slide-out sidebar css
 */
body {
  margin: 0;
  background-color: #f9f9f9;
}

#page_contents {
  padding: 4.5rem 1rem 1rem 1rem;
  height: 100vh;
  margin: 0 auto;
  max-width: 64pc;
  display: flex;
  align-items: stretch;
}

nav {
  flex-basis: 240px;
  flex-grow: 0;
}

#content {
  flex-grow: 1;
}

.collapse-icon {
  display: none!important;
}

@media only screen and (max-width: 767px) {
  .collapse-icon {
    display: inherit!important;
  }
  nav {
    width: 240px!important;
    transform: translate3d(-240px,0,0);
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    overflow-y: scroll;
  }
}

.nav_open #page, .nav_open header {
  transform: translate3d(260px,0,0);
}
.nav_open #page, .nav_open header,
#page, header {
  transition: transform .15s cubic-bezier(.2,.3,.25,.9);
}

/* ************************** */

.profile-photo {
  width: 48px;
  border-radius: 4px;
}


#profile {
  background: #f5f8fa;
}

#profile_contents {
  padding: 2rem 1rem 1rem 1rem;
  height: 100vh;
  margin: 0 auto;
  max-width: 60pc;
}

#cover_photo {
  background: url(/photos/city-landmark-lights-night.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 20pc;
  width: 100%;
}
#profile_text {
  width: 100%;
  display: flex;
  align-items: stretch;
}
#profile_info {
  width: 240px;
  flex-grow: 0;
}
#profile_feed, #group_entries {
  flex-basis: 400px;
  flex-grow: 3;
}

#profile_photo {
  margin-top: -120px;
  margin-left: 0;
  margin-right: auto;
  width: 180px;
}
#profile_photo img {
  width: 180px;
  border-radius: 6px;
  border: 4px #fff solid;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.4);
}
#profile_bio {
  margin-top: 1pc;
}

#profile_bio h2 {
  margin-bottom: 0;
}
#profile_bio h3 {
  margin-top: 0;
  color: #555;
}

#profile_bio .user_groups {
  margin: 0;
  padding: 0;
  padding-left: 1.5em;
}

@media only screen and (max-width: 600px) {
  #profile_text {
    display: block;
  }
  #profile_info {
    width: 100%;
    display: flex;
    align-content: stretch;
    margin-top: -20px;
    margin-bottom: 10px;
  }
  #profile_photo {
    flex-grow: 1;
    margin-left: 0;
    margin-top: 0;
  }
  #profile_bio {
    flex-grow: 3;
    margin-top: 0;
  }
  #profile_bio .user_groups {
    list-style-type: none;
    padding-left: 0;
  }
  #profile_bio .user_groups li {
    float: left;
    margin-right: 1em;
  }
}

/* ************************** */

ul.entry-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  background: #fff;
  border-radius: 6px;
  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.2);
}

.entry {
  border-bottom: 1px #ddd solid;
  margin-bottom: 0;
  padding: 1em 1em 0.5em 1em;
}
.entry:last-child {
  border: 0;
}

.entry .header {
  display: flex;
  align-items: center;
}
.entry .header .left {
  flex-basis: 56px;
  flex-grow: 0;
}
.entry .header .right {
  flex-grow: 1;
}
.entry .header .right .author a:hover {
  text-decoration: none;
}
.entry .header .right .author a:hover .name {
  text-decoration: underline;
}
.entry .header .right .group-date, .entry .header .right .group-date a {
  color: #999;
}
.entry .header .right .group-date a:hover {
  text-decoration: underline;
}


.entry .content {
  padding: 5px 0 10px 0;
  font-size: 1.5em;
  line-height: 1.8em;
}
.entry .content .command, .entry-compact .content .command {
  color: #888;
}

.entry .footer-actions {
  margin: 0;
  padding: 6px 0;
  border-top: 1px #eee solid;
}
.entry .footer-actions .action {
  margin-right: 1em;
  text-decoration: none;
  color: #888;
}
.entry .footer-actions .action:hover {
  color: #d83;
}

/* ************************** */

.subscribers {
  margin-top: 20px;
}
.subscribers > span {
  margin: 4px 0;
  display: block;
}

ul.group_subscribers {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

ul.group_subscribers li {
  float: left;
  margin-bottom: 4px;
  margin-right: 4px;
}

#group_entries .user-list {
  margin: 0;
  padding: 0;
  background: #fff;
  border-radius: 6px;
  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.2);
}

.user-list .nav {
  display: flex;
  align-items: center;
  border-bottom: 1px #ddd solid;
}
.user-list .nav .link {
  flex-grow: 1;
  flex-basis: 80px;
  padding: 10px;
}
.user-list .nav .link a {
  font-weight: bold;
  font-size: 2em;
  line-height: normal;
}
.user-list .nav .right {
  text-align: right;
}
.user-list .nav .date {
  flex-grow: 10;
  text-align: center;
  font-size: 1.4em;
}

#group_entries .user {
  border-bottom: 1px #ddd solid;
  margin-bottom: 0;
  padding: 1em 1em 0.5em 1em;
}
#group_entries .user:last-child {
  border: 0;
}

.user .header {
  display: flex;
  align-items: center;
}
.user .header .left {
  flex-basis: 56px;
  flex-grow: 0;
}
.user .header .right {
  flex-grow: 1;
}
.user .header .right .author .nickname {
  font-size: 1.5em;
  line-height: 1.5em;
}


ul.entry-list-compact {
  list-style-type: none;
  margin: 0 0 10px 0;
  padding: 0;
}

.entry-compact {
  padding-top: 10px;
}
.entry-compact .content {
  padding: 5px 0 5px 0;
  font-size: 1.3em;
}

.entry-compact .footer-actions {
  margin: 0;
  padding: 3px 0;
}
.entry-compact .footer-actions .action {
  margin-right: 1em;
  color: #888;
}
.entry-compact .footer-actions .action a {
  text-decoration: none;
  color: #888;
}
.entry-compact .footer-actions .action a:hover {
  color: #d83;
}


/* ************************** */


.ui.vertical.menu .menu .item {
  font-size: 1em;
}

.card {
  border-radius: 0.25rem;
  background: #fff;
  border: 1px solid #e8e8e8;
  box-shadow: 0 1px 0 rgba(0,0,0,.25);
  padding: 1rem;
}

